--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ldiv<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -474,7 +474,120 @@
             </li>
           </ul>
         </div>
+
+        <div>
+          <form action="">
+            <div class="footer-form">
+              <label class="subscribe" for="subscribe">Subscribe</label>
+              <input
+                class="footer-mail"
+                type="email"
+                name="subscribe"
+                id="subscribe"
+                placeholder="E-mail"
+              />
+              <button class="send-mail">
+                Subscribe
+                <svg class="lot" width="24" height="24">
+                  <use href="./images/icons.svg#icon-lot"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="btn-close-form" type="button" name="close-form">
+          <svg class="modal-icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+
+        <form
+          action=""
+          class="form"
+          name="feedback-form"
+          autocomplete="off"
+          novalidate
+        >
+          <div>
+            <div class="form-item">
+              <label class="form-label" for="">Name</label>
+              <div class="form-little-item">
+                <input
+                  class="form-input"
+                  type="text"
+                  name="user_name"
+                  id="user_name"
+                /><svg class="form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+              </div>
+            </div>
+
+            <div class="form-item">
+              <label class="form-label" for="user_tel">Phone</label>
+              <div class="form-little-item">
+                <input
+                  class="form-input"
+                  type="tel"
+                  name="user_tel"
+                  id="user_tel"
+                />
+                <svg class="form-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </div>
+            </div>
+
+            <div class="form-item">
+              <label class="form-label" for="user_email">Email</label>
+              <div class="form-little-item">
+                <input
+                  class="form-input"
+                  type="email"
+                  name="user_email"
+                  id="user_email"
+                />
+                <svg class="form-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+              </div>
+            </div>
+
+            <div class="form-area">
+              <label class="form-label" for="comment">Comment</label>
+              <textarea
+                class="form-textarea"
+                rows="6"
+                name="comment"
+                id="comment"
+                placeholder="Text input"
+              ></textarea>
+            </div>
+          </div>
+
+          <div class="form-accept">
+            <input class="form-check" type="checkbox" id="accept" />
+            <label class="label-accept" for="accept">
+              <span
+                ><svg class="check" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              <p class="checkbox-text">
+                I accept the terms and conditions of the
+              </p>
+              <a class="form-link" href="">Privacy Policy</a>
+            </label>
+            <button class="submit" type="button">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
