--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ ldiv<!DOCTYPE html>
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <!-- is-open -->
 
       <div class="modal">
@@ -515,78 +515,81 @@ ldiv<!DOCTYPE html>
           autocomplete="off"
           novalidate
         >
-          <div>
-            <div class="form-item">
-              <label class="form-label" for="">Name</label>
-              <div class="form-little-item">
-                <input
-                  class="form-input"
-                  type="text"
-                  name="user_name"
-                  id="user_name"
-                /><svg class="form-icon" width="18" height="18">
-                  <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-              </div>
+          <div class="form-item">
+            <label class="form-label" for="user-name">Name</label>
+            <div class="form-little-item">
+              <input
+                class="form-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
             </div>
+          </div>
 
-            <div class="form-item">
-              <label class="form-label" for="user_tel">Phone</label>
-              <div class="form-little-item">
-                <input
-                  class="form-input"
-                  type="tel"
-                  name="user_tel"
-                  id="user_tel"
-                />
-                <svg class="form-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-phone"></use>
-                </svg>
-              </div>
+          <div class="form-item">
+            <label class="form-label" for="user-tel">Phone</label>
+            <div class="form-little-item">
+              <input
+                class="form-input"
+                type="tel"
+                name="user-tel"
+                id="user-tel"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
             </div>
+          </div>
 
-            <div class="form-item">
-              <label class="form-label" for="user_email">Email</label>
-              <div class="form-little-item">
-                <input
-                  class="form-input"
-                  type="email"
-                  name="user_email"
-                  id="user_email"
-                />
-                <svg class="form-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-              </div>
+          <div class="form-item">
+            <label class="form-label" for="user-email">Email</label>
+            <div class="form-little-item">
+              <input
+                class="form-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
             </div>
+          </div>
 
-            <div class="form-area">
-              <label class="form-label" for="comment">Comment</label>
-              <textarea
-                class="form-textarea"
-                rows="6"
-                name="comment"
-                id="comment"
-                placeholder="Text input"
-              ></textarea>
-            </div>
+          <div class="form-area">
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              class="form-textarea"
+              rows="6"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
           </div>
 
           <div class="form-accept">
-            <input class="form-check" type="checkbox" id="accept" />
-            <label class="label-accept" for="accept">
-              <span
-                ><svg class="check" width="10" height="8">
+            <input
+              class="form-check visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
+            <label class="label-accept" for="user-privacy">
+              <span class="check-accept">
+                <svg class="check" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              <p class="checkbox-text">
-                I accept the terms and conditions of the
-              </p>
+              I accept the terms and conditions of the
               <a class="form-link" href="">Privacy Policy</a>
             </label>
-            <button class="submit" type="button">Send</button>
           </div>
+          <button class="submit" type="button">Send</button>
         </form>
       </div>
     </div>
