--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ldiv<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -477,7 +477,7 @@ ldiv<!DOCTYPE html>
 
         <div class="footer-small-form">
           <p class="footer-form-text">Subscribe</p>
-          <form action="" class="footer-form" autocomplete="off" novalidate>
+          <form class="footer-form" autocomplete="off" novalidate>
             <label class="footer-label">
               <input
                 class="footer-mail"
@@ -498,8 +498,6 @@ ldiv<!DOCTYPE html>
     </footer>
 
     <div class="backdrop is-open">
-      <!-- is-open -->
-
       <div class="modal">
         <button class="btn-close-form" type="button" name="close-form">
           <svg class="modal-icon-close" width="8" height="8">
@@ -508,13 +506,7 @@ ldiv<!DOCTYPE html>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
 
-        <form
-          action=""
-          class="form"
-          name="feedback-form"
-          autocomplete="off"
-          novalidate
-        >
+        <form class="form" name="feedback-form" autocomplete="off" novalidate>
           <div class="form-item">
             <label class="form-label" for="user-name">Name</label>
             <div class="form-little-item">
