--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
           <div class="form-area">
             <label class="form-label" for="user-comment">Comment</label>
             <textarea
-              class="form-textarea"
+              class="form-comment"
               name="user-comment"
               id="user-comment"
               placeholder="Text input"
