--- a/index.html
+++ b/index.html
@@ -559,7 +559,8 @@
               name="user-comment"
               id="user-comment"
               placeholder="Text input"
-            ></textarea>
+            >
+            </textarea>
           </div>
 
           <div class="form-accept">
